--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,6 +12,7 @@
         <div class="row mt-5">
             <div class="col s12">
                 <h1><span class="yellow-text">Dash</span>Main</h1>
+                <h6 class="deep-orange-text text-lighten-4">System buid on trust</h6>
             </div>
         </div>
         <div class="row">
