--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -57,8 +57,10 @@
         <h5>Products</h5>
         <a th:href="@{/dashboard/promotion/products(requesterId=${entity.id})}"
             class="btn-small waves-effect waves-light pink darken-2 ">Promotions</a>
+        <a th:href="@{/dashboard/sales(requesterId=${entity.id})}"
+            class="btn-small waves-effect waves-light  green darken-3">View Sales</a>
         <a th:href="@{/dashboard/new/sale(requesterId=${entity.id})}"
-            class="btn-small waves-effect waves-light  deep-orange">Sell</a>
+            class="btn-small waves-effect waves-light  deep-orange">Sell Product</a>
     </div>
 </div>
 
