--- a/src/main/resources/templates/administrator/sales_analysis.html
+++ b/src/main/resources/templates/administrator/sales_analysis.html
@@ -49,11 +49,22 @@
 
                 <button type="submit" class="indigo darken-2 right btn waves-effect waves-light">Search</button>
             </form>
-            <form th:if="${pickBy == 'timeFrame'}" th:action="@{/dashboard/analyze/sales/timeframe}" th:method="get"
+            <form th:if="${pickBy == 'timeframe'}" th:action="@{/dashboard/analyze/sales/timeframe}" th:method="get"
                 th:object="${product}" class="col s12">
-                <div class="row">
-                    <div class="col s12">
-                        <!-- Date picker options -->
+                <div class="row" hidden="true">
+                    <div class="input-field col s12">
+                        <input class="white-text" required=true type="text" th:value=${requesterId}
+                            th:name="requesterId">
+                    </div>
+                </div>
+                <div class="row purple darken-4 z-depth-3 picker-composite">
+                    <div class="input-field col s12">
+                        <input class="white-text" required=true type="date" id="from" th:name="from">
+                        <label class="white-text" for="from">Start Date</label>
+                    </div>
+                    <div class="input-field col s12">
+                        <input class="white-text" required=true type="date" id="to" th:name="to">
+                        <label class="white-text" for="to">End Date</label>
                     </div>
                 </div>
                 <button type="submit" class="indigo darken-2 right btn waves-effect waves-light">Search</button>
