Customer regex validation

--- a/src/main/resources/templates/representative/add_customer.html
+++ b/src/main/resources/templates/representative/add_customer.html
@@ -39,8 +39,7 @@
                 <div class="row">
                     <div class="input-field col s12">
                         <label class="white-text" for="username">Phone Number</label>
-                        <input class="white-text" required=true minlength="3" maxlength="16" type="tel" id="phoneNumber"
-                            th:name="phoneNumber">
+                        <input class="white-text" required=true type="tel" id="phoneNumber" th:name="phoneNumber">
                     </div>
                 </div>
 
