--- a/src/main/resources/templates/administrator/manage_products.html
+++ b/src/main/resources/templates/administrator/manage_products.html
@@ -38,7 +38,7 @@
                 <table class="highlight z-depth-3">
                     <thead class="purple darken-4 white-text gray-text text-lighten-2">
                         <tr>
-                            <td>Id</td>
+                            <!-- <td>Id</td> -->
                             <td>Product Name</td>
                             <td>Category</td>
                             <td>Description</td>
@@ -50,7 +50,7 @@
                     </thead>
                     <tbody>
                         <tr th:each="product: ${products}">
-                            <td th:text="${product.id}"></td>
+                            <!-- <td th:text="${product.id}"></td> -->
                             <td th:text="${product.productName}"></td>
                             <td th:text="${product.category}"></td>
                             <td th:text="${product.description}"></td>
