--- a/src/main/resources/templates/administrator/manage_reps.html
+++ b/src/main/resources/templates/administrator/manage_reps.html
@@ -38,7 +38,7 @@
                 <table class="highlight z-depth-3">
                     <thead class="purple darken-4 white-text gray-text text-lighten-2">
                         <tr>
-                            <td>Id</td>
+                            <!-- <td>Id</td> -->
                             <td>Username</td>
                             <td>First name</td>
                             <td>Last name</td>
@@ -48,7 +48,7 @@
                     </thead>
                     <tbody>
                         <tr th:each="rep: ${representatives}">
-                            <td th:text="${rep.id}"></td>
+                            <!-- <td th:text="${rep.id}"></td> -->
                             <td th:text="${rep.username}"></td>
                             <td th:text="${rep.firstName}"></td>
                             <td th:text="${rep.lastName}"></td>
