--- a/src/main/resources/templates/administrator/rep_deleted.html
+++ b/src/main/resources/templates/administrator/rep_deleted.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th=”http://www.thymeleaf.org”> <head>
-<title>Deleted Representative</th:block>
-</title>
+<title>Deleted Representative</title>
 <th:block th:insert="fragments :: common_head"></th:block>
 <link rel="stylesheet" th:href="@{/css/administrator/common_style.css}">
 </head>
