--- a/src/main/resources/templates/representative/manage_customers.html
+++ b/src/main/resources/templates/representative/manage_customers.html
@@ -38,7 +38,7 @@
                 <table class="highlight z-depth-3">
                     <thead class="purple darken-4 white-text gray-text text-lighten-2">
                         <tr>
-                            <td>Id</td>
+                            <!-- <td>Id</td> -->
                             <td>First name</td>
                             <td>Last name</td>
                             <td>Phone number</td>
@@ -48,7 +48,7 @@
                     </thead>
                     <tbody>
                         <tr th:each="customer: ${customers}">
-                            <td th:text="${customer.id}"></td>
+                            <!-- <td th:text="${customer.id}"></td> -->
                             <td th:text="${customer.firstName}"></td>
                             <td th:text="${customer.lastName}"></td>
                             <td th:text="${customer.phoneNumber}"></td>
