--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -40,7 +40,7 @@
                         Boot</a> with
                     dependencies:
                     <span class="green-text text-accent-3">
-                        Spring Web, Spring Data MongoDB and Validation.
+                        Spring Web, Spring Data MongoDB, Validation and Thymeleaf.
                     </span>
                     Styles provided by
                     <a href="https://materializecss.com" target="_blank" class="pink-text text-lighten-2">Materialize
